manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      restartPolicy: Always
      containers:
        - image: docker.io/valistarguo/website-blog
          name: frontend
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "50m"
              memory: "50M"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: blog
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: frontend
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: blog
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - val-istar-guo.com
      tls:
        httpsRedirect: false
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: blog-frontend-tls
      hosts:
        - val-istar-guo.com

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vsvc
  namespace: blog
spec:
  hosts:
    - val-istar-guo.com
  gateways:
    - frontend-gateway
  http:
    - match:
        - scheme:
            exact: http
          withoutHeaders:
            :path:
              prefix: /.well-known/acme-challenge/
      redirect:
        scheme: https
        redirectCode: 302
    - route:
        - destination:
            host: frontend-svc
            port:
              number: 3000
